# discord-entry-notification-bot

./: README.md  env.py  main.py  main.ts  package.json  pyproject.toml  requirements.txt  tsconfig.json
